<resources>
    <string name="app_name">DoorStep</string>
    <string name="already_a_member">Already a Member?</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="sign_up">Not a member?</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="reset_my_password">Reset My Password</string>
    <string name="email_address">Email Address</string>
    <string name="ok">OK</string>
    <string name="sign_up_nav">Sign Up</string>
    <string name="create_profile">Create Profile</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="lastName">Last Name</string>
    <string name="enter_your_lastName">Enter Your Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="e_mail">E-mail</string>
    <string name="profile">Profile</string>
    <string name="surname">Last Name</string>
    <string name="dies">Phone Number</string>
    <string name="mail_address">E-mail Address</string>
    <string name="log_out">Log Out</string>
    <string name="login_button_text_home">Login</string>
    <string name="signup_button_text_home">SignUp</string>
</resources>