<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="192dp"
        android:layout_width="match_parent">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">
            <ImageView
                android:id="@+id/update_imageView"
                android:layout_width="match_parent"
                android:layout_height="182dp"
                android:gravity="center_vertical"
                android:src="@drawable/defavatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:foreground="@drawable/rounded_fg"/>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent">
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textViewProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/create_profile"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
            <TextView
                android:id="@+id/TextViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/EditTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName|textCapSentences"
                android:hint="@string/enter_your_name"/>
            <TextView
                android:id="@+id/TextViewSurName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lastName"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/EditTextSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName|textCapSentences"
                android:hint="@string/enter_your_lastName"/>
            <TextView
                android:id="@+id/TextViewPhoneNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/EditTextPhoneNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_your_phone_number"
                android:inputType="phone"/>
            <TextView
                android:id="@+id/TextViewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/e_mail"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/textViewEmailAdress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/email_address"
                android:textColor="@color/black"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:id="@+id/btnSaveButton"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/RPbutton"
                android:textColor="@color/white"/>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>